@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -91,14 +91,14 @@ public class Test extends MultiThreadedTest {
 
     static class A {
         Object m() {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
     }
 
     static class B extends A {
         @Override
         Object m() {
-            return new Integer(1);
+            return Integer.valueOf(1);
         }
     }
 
