@@ -37,7 +37,7 @@ import org.testng.annotations.Test;
  * @test
  * @bug 6489502
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true stream.Bug6489502
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow stream.Bug6489502
  * @run testng/othervm stream.Bug6489502
  * @summary Test XMLInputFactory works correctly in case it repeats to create reader.
  */
