@@ -68,7 +68,7 @@ public class bug8081019 {
     private static void runProcess() throws Exception {
         String javaPath = System.getProperty("java.home", "");
         String command = javaPath + File.separator + "bin" + File.separator + "java"
-                + " " + bug8081019.class.getName() + " " + RUN_TEST;
+                + " -Djava.security.manager=allow " + bug8081019.class.getName() + " " + RUN_TEST;
 
         Process process = Runtime.getRuntime().exec(command);
         boolean processExit = process.waitFor(20, TimeUnit.SECONDS);
